--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Welcome to my First Blog... 👋"
+title: "Dev Blog"
 ---
+#Welcome to my First Blog... 👋
 
 Hey there! 🚀 I'm thrilled to have you on my blog where I share insights, tips, and experiences in the exciting world of frontend development.
 
